[package]
name = "indexer"
version = "0.1.0"
edition = "2021"


[dependencies]
ethcontract = { version = "0.25" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# workspace dependencies
database = { path = "../database" }

[build-dependencies]
ethcontract-generate = "0.25"
reqwest = { version = "0.11.18", features = ["blocking"] }
