[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = "1"
tokio = { version = "1", features = ["full"] }

# workspace dependencies
indexer = { path = "../indexer" }
server = { path = "../server" }
database = { path = "../database" }
